	 pokefinder.c,rollback.c}: various cleanups (Stuart).
20070705 z80/z80_ops.c: speed up z80_do_opcodes() with +D enabled (thanks, Fred)
	 (Stuart).
20070706 z80/z80_ops.c: fix non-gcc compilation (Fred).
20070707 ChangeLog: chuck in a few entries as we go (Fred).
20070707 ChangeLog: fix reset attribution (thanks, Stuart) (Fred).
20070707 ui/win32/win32ui.c: fix compilation without lib765 (Stuart).
20070707 ui/win32/menu_data.{c,h,rc}: add hard reset and +D menu items, and
	 disable RS232 and Sinclair Network menu items in Win32 UI (Stuart).
20070715 ui/win32/{win32display.c,win32ui.c}: coding style cleanups (Stuart).
20070715 ui/win32/{error.c,statusbar.c,win32display.c}: more cleanups (Stuart).
20070715 ui/win32/debugger.c: fix single stepping in the Win32 UI's debugger
	 (Stuart).
20070715 disk/{plusd.c,wd1770.[ch]}: coding style cleanups (Stuart).
20070720 sound/sfifo.c,ui/{ggi/{ggi_internals.h,ggidisplay.c,ggikeyboard.c,
	 ggiui.c},gtk/gtkmouse.c,win32/{win32display.c,win32display.h}}: use
	 '#include <config.h>' instead of '#include "config.h"' (Stuart).
20070727 configure.in,utils.[ch]: remove use of mmap(): added complexity for
	 no real benefit.
20070727 disk/plusd.c,divide.c,if1.c,if2.c,joystick.c,kempmouse.c,keyboard.c,
	 machines/specplus3.c,memory.c,module.c,periph.c,printer.c,scld.c,
	 simpleide.c,tape.c,ui/gtk/{browse.c,debugger.c,gtkjoystick.c,
	 gtkmouse.c,gtkui.c,pokefinder.c,rollback.c},z80/z80.c,zxatasp.c,
	 zxcf.c: some -Wextra tidyup (not finished yet).
20070729 menu_data.pl,printer.c,settings.pl,ui/gtk/{debugger.c,gtkjoystick.c,
	 gtkmouse.c,pokefinder.c,stock.c},z80/coretest.c: more -Wextra tidyup.
20070730 Makefile.am,configure.in,fuse.c,sound/{Makefile.am,alsasound.c,
	 aosound.c,coreaudiosound.c,dxsound.c,hpsound.c,lowlevel.h,nullsound.c,
	 osssound.c,sdlsound.c,sfifo.c,sound.c,sunsound.c},spectrum.c,timer.c:
	 move sound selection logic into configure.in (patch #1763265).
20070730 utils.c: mmap no longer used.