@@ -442,9 +442,9 @@ AC_CHECK_HEADER(
   [AC_MSG_WARN(CoreAudio/AudioHardware.h not found - no CoreAudio sound output)]
 )
 
-#
-# Decide which sound routines to use
-#
+dnl
+dnl Decide which sound routines to use
+dnl
 
 AC_MSG_CHECKING(which sound routines to use)
 if test "$dxsound_available" = yes; then
@@ -467,7 +467,7 @@ elif test "$ac_cv_header_sys_soundcard_h" = yes; then
   SOUND_LIBADD='osssound.$(OBJEXT)' SOUND_LIBS=''
   AC_MSG_RESULT(OSS)
 elif test "$ac_cv_header_sys_audioio_h" = yes; then
-  # OpenBSD
+  dnl OpenBSD
   SOUND_LIBADD='sunsound.$(OBJEXT)' SOUND_LIBS=''
   AC_MSG_RESULT(OpenBSD)
 elif test "$coreaudio_available" = yes; then
@@ -480,7 +480,7 @@ else
 fi
 
 if test "$sound_fifo" = yes; then
-  # Strange construct used here as += doesn't seem to work on OS X
+  dnl Strange construct used here as += doesn't seem to work on OS X
   SOUND_LIBADD="$SOUND_LIBADD"' sfifo.$(OBJEXT)'
   AC_DEFINE([SOUND_FIFO], 1, [Defined if the sound code uses a fifo])
 fi
@@ -547,6 +547,26 @@ AM_PATH_XML2(2.0.0,AC_DEFINE([HAVE_LIB_XML2], 1,
              [Defined if we've got libxml2]),
              AC_WARN(libxml2 not found - config file use disabled))
 
+dnl Work out which timer routines to use
+AC_MSG_CHECKING(which timer routines to use)
+if test "$UI" = sdl; then
+  TIMER_LIBADD='sdl.$(OBJEXT)'
+  AC_MSG_RESULT(SDL)
+else
+  case "$target_os" in
+    win32)
+      TIMER_LIBADD='win32.$(OBJEXT)'
+      AC_MSG_RESULT(Win32)
+      ;;
+    *)
+      TIMER_LIBADD='unix.$(OBJEXT)'
+      AC_MSG_RESULT(unix)
+      ;;
+  esac
+fi
+
+AC_SUBST(TIMER_LIBADD)
+
 dnl Do we want the low memory compile?
 AC_MSG_CHECKING(whether low memory compile requested)
 AC_ARG_ENABLE(smallmem,
@@ -612,6 +632,7 @@ perl/Fuse/Makefile \
 pokefinder/Makefile \
 roms/Makefile \
 sound/Makefile \
+timer/Makefile \
 ui/Makefile \
 ui/fb/Makefile \
 ui/gtk/Makefile \
