@@ -70,7 +70,7 @@
 #include "sound.h"
 #include "spectrum.h"
 #include "tape.h"
-#include "timer.h"
+#include "timer/timer.h"
 #include "trdos.h"
 #include "ui/ui.h"
 #include "ui/scaler/scaler.h"
